# framework

./: .appveyor.yml  .buildpacks  .codecov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CODEOWNERS  CONTRIBUTING.md  PKGBUILD  README.md  build.d  dscanner.ini  dub.json  dub.selections.json  meson.build  meson_options.txt
src/: meson.build
src/android/: dub.json
src/android/source/aurorafw/android/platform/: api_level.d  asset_manager.d  asset_manager_jni.d  bitmap.d  choreographer.d  configuration.d  data_space.d  dlext.d  fdsan.d  hardware_buffer.d  hardware_buffer_jni.d  input.d  keycodes.d  log.d  looper.d  multinetwork.d  native_activity.d  native_window.d  native_window_jni.d  neuralnetworks.d  obb.d  rect.d  sensor.d  set_abort_message.d  sharedmem.d  sharedmem_jni.d  storage_manager.d  surface_texture.d  surface_texture_jni.d  sync.d  trace.d  window.d
src/audio/: dub.json  dub.selections.json  meson.build
src/audio/source/aurorafw/audio/: audiobackend.d  audioeffect.d  audioinput.d  audiooutput.d  audioutils.d  backend.d  effect.d  input.d  output.d  package.d  utils.d
src/audio/source/aurorafw/audio/portaudio/: package.d
src/audio/source/aurorafw/audio/sndfile/: package.d
src/audio/source/aurorafw/audio/soundio/: package.d
src/cli/: dub.json  dub.selections.json
src/cli/source/aurorafw/cli/terminal/: terminal.d  window.d
src/core/: .gitignore  dub.json  dub.selections.json  meson.build
src/core/source/aurorafw/core/: appcontext.d  application.d  concurrency.d  debugmanager.d  dylib.d  inputlistener.d  logger.d  opt.d  package.d  semver.d  versionmanager.d
src/core/source/aurorafw/core/input/: events.d  keys.d  manager.d  package.d  rawlistener.d  state.d
src/core/source/aurorafw/core/io/: filestream.d  stream.d
src/core/source/aurorafw/core/memory/: allocator.d
src/entity/: dub.json
src/entity/source/aurorafw/entity/: componentmanager.d  componentpool.d  entity.d  entitymanager.d  icomponent.d  ientity.d  system.d  systemmanager.d  world.d
src/event/: README.md  dub.json
src/event/source/aurorafw/event/eventsystem/: event.d  eventdispatcher.d  package.d
src/graphics/: dub.json  dub.selections.json  meson.build
src/graphics/source/aurorafw/graphics/: package.d  root.d
src/graphics/source/aurorafw/graphics/api/: context.d  indexbuffer.d  renderer.d  rtshaderpipeline.d  vertexarray.d
src/graphics/source/aurorafw/graphics/opengl/: context.d
src/gui/: dub.json  dub.selections.json  meson.build
src/gui/source/aurorafw/gui/: package.d  window.d
src/gui/source/aurorafw/gui/api/: backend.d
src/gui/source/aurorafw/gui/platform/: x.d
src/image/: dub.json  meson.build
src/image/source/aurorafw/image/: color.d  package.d
src/jni/: dub.json
src/jni/source/aurorafw/jni/platform/: jni.d  jni_md.d
src/legacy/: meson.build
src/legacy/audio/: meson.build
src/legacy/audio/include/AuroraFW/Audio/: AudioBackend.h  AudioInput.h  AudioOutput.h  AudioUtils.h
src/legacy/audio/src/: AudioBackend.cpp  AudioInput.cpp  AudioOutput.cpp  AudioUtils.cpp
src/legacy/cli/: meson.build
src/legacy/cli/include/AuroraFW/: CLI.h
src/legacy/cli/include/AuroraFW/CLI/: Color.h  Input.h  Log.h  Output.h
src/legacy/cli/src/: Color.cpp  Input.cpp  Output.cpp
src/legacy/core/: meson.build
src/legacy/core/include/AuroraFW/: Aurora.h  Core.h
src/legacy/core/include/AuroraFW/Core/: Application.h  ApplicationContext.h  DebugManager.h  InputListener.h  OptionHandler.h
src/legacy/core/src/: Application.cpp  ApplicationContext.cpp  DebugManager.cpp  InputListener.cpp  OptionHandler.cpp
src/legacy/corelib/: meson.build
src/legacy/corelib/include/AuroraFW/: Global.h
src/legacy/corelib/include/AuroraFW/CoreLib/: Allocator.h  Callback.h  CircularShift.h  Endian.h  MemoryManager.h  String.h  Target.h  Type.h  TypeInfo.h  TypeTraits.h  Utils.h
src/legacy/corelib/include/AuroraFW/Internal/: Config.h
src/legacy/corelib/src/: Allocator.cpp  CircularShift.cpp  MemoryManager.cpp  String.cpp
src/legacy/crypto/: meson.build
src/legacy/crypto/include/AuroraFW/: Crypto.h
src/legacy/crypto/src/: AES.cpp
src/legacy/gengine/: meson.build
src/legacy/gengine/2d/: meson.build
src/legacy/gengine/2d/src/: Renderable2D.cpp  Renderer2D.cpp  Sprite.cpp
src/legacy/gengine/core/: meson.build
src/legacy/gengine/core/src/: Application.cpp  AssetManager.cpp  AssetType.cpp  GraphicsContext.cpp  Input.cpp  RTShaderConverterGLSL.cpp  RTShaderConverterHLSL.cpp  RTShaderConverterSPIRV.cpp  Renderer.cpp  Window.cpp
src/legacy/gengine/direct3d/: meson.build
src/legacy/gengine/opengl/: meson.build
src/legacy/gengine/opengl/src/: GLBuffer.cpp  GLContext.cpp  GLGlobal.cpp  GLIndexBuffer.cpp  GLRTShader.cpp  GLRTShaderPipeline.cpp  GLRenderer.cpp  GLTexture2D.cpp  GLVertexArray.cpp
src/legacy/gengine/vulkan/: meson.build
src/legacy/gengine/vulkan/src/: VKContext.cpp  VKRenderer.cpp
src/legacy/gui/: meson.build
src/legacy/gui/src/: Application.cpp  Button.cpp  Label.cpp  Style.cpp  Widget.cpp  Window.cpp
src/legacy/image/: meson.build
src/legacy/image/src/: BaseColor.cpp  Image.cpp
src/legacy/image/src/STB/: Image.cpp
src/legacy/io/: meson.build
src/legacy/io/src/: File.cpp  InfoMemory.cpp  InfoSystem.cpp  Timer.cpp
src/legacy/math/: meson.build
src/legacy/math/include/AuroraFW/: Math.h
src/legacy/netsocks/: meson.build
src/legacy/netsocks/src/: Socket.cpp
src/legacy/stdl/: meson.build
src/legacy/stdl/src/: Memory.c
src/math/: dub.json  dub.selections.json  meson.build
src/math/source/aurorafw/math/: matrix.d  package.d  vector.d
src/metadata/: dub.json  dub.selections.json
src/metadata/source/aurorafw/metadata/: jpeg.d  mime.d  pdf.d  signature.d
src/net/: dub.json
src/net/source/aurorafw/net/: port.d  socket.d
src/source/aurorafw/: package.d
src/stdx/: dub.json  meson.build
src/stdx/source/aurorafw/stdx/: array.d  concurrency.d  exception.d  getopt.d  object.d  string.d  traits.d  typecons.d
src/unit/: dub.json
src/unit/source/aurorafw/unit/: assertion.d  package.d
(+413 files in other folders)
